fix overflow property on bodypage

--- a/achat/static/achat/css/navbar.css
+++ b/achat/static/achat/css/navbar.css
@@ -1,7 +1,5 @@
 
-body {
-  overflow-x: hidden;
-}
+
 nav ul li.item a:after, .footer div a:after{
   content:'';
   width:0%;
